# ootp_utils

./: .gitignore  parse_mlb_draft.py  parse_sql_file.py  pyproject.toml
app/: __init__.py  models.py  run.py
app/config/: config.py
app/db/: db.py  dbsession.py
app/views/: cities.py
